apps/tencentcloud/jenkins/post/_base/policies/set-pod-compute-class.yaml
apiVersion: kyverno.io/v2beta1
kind: MutationPolicy
metadata:
  name: set-pod-compute-class
spec:
  rules:
    - name: add-compute-class-and-annotations
      match:
        resources:
          kinds:
            - Pod
          selector:
            matchExpressions:
              - key: kubernetes.jenkins.io/controller
                operator: Exists
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
          spec:
            nodeSelector:
              compute-class: ci-worker
