apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/patched-ci-worker-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tidb-hostpath
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
    ci_refs: '{"org":"pingcap","repo":"tidb","base_ref":"master"}'
spec:
  nodeSelector:
    compute-class: ci-worker
  containers:
    - name: main
      image: busybox:1.36
  volumes:
    - name: hp
      hostPath:
        path: /var/run/docker.sock
