apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/patched-super-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tidb-super-node
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
    ci_refs: '{"org":"pingcap","repo":"tidb","base_ref":"master"}'
spec:
  nodeSelector:
    node.kubernetes.io/instance-type: eklet
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
