apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/resource-no-ci-refs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-ci-refs
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
