apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/resource-non-tidb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-non-tidb
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_refs: '{"org":"pingcap","repo":"br","base_ref":"master"}'
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
