apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/resource-tidb-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tidb-privileged
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_refs: '{"org":"pingcap","repo":"tidb","base_ref":"master"}'
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
