apps/tencentcloud/jenkins/post/_base/policies/tests/set-pod-compute-class/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: set-pod-compute-class
policies:
  - ../../set-pod-compute-class.yaml
resources:
  - resource-no-ci-refs.yaml
  - resource-empty-ci-refs.yaml
  - resource-non-release.yaml
  - resource-release.yaml
results:
  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-no-ci-refs
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-empty-ci-refs
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-non-release
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-release
    kind: Pod
    result: pass
